--- a/soal2.html
+++ b/soal2.html
@@ -27,7 +27,10 @@
             Buatlah sebuah fungsi bernama Welcome(), yang mengembalikan nilai berupa "Selamat datang di universitas teknokrat indonesia", yang kemudian akan ditampilkan di 
 halaman html. Tampilkan di id jawaban5
         */
-
+        function Welcome() {
+    return "Selamat datang di universitas teknokrat indonesia";
+}
+document.getElementById("jawaban5").innerHTML = Welcome();
         // tulis kode dibawah ini
 
         
@@ -37,6 +40,17 @@ halaman html. Tampilkan di id jawaban5
             Buatlah sebuah fungsi bernama lopping(), yang mengembalikan nilai hasil looping dari dua parameter yang dikirim.
             contoh: looping(3, 7), maka akan tampil : 3,4,5,6,7
         */
+        function looping(start, end) {
+            let result = "";
+            for (let i = start; i <= end; i++) {
+                result += i;
+                if (i !== end) {
+                    result += ",";
+                }
+            }
+            return result;
+        }
+        document.getElementById("jawaban6").innerHTML = looping(3, 7);
 
         // tulis kode di sini 
 
